--- a/client/src/components/views/LandingPage/Sections/DrawTodoList/DrawTodoList.scss
+++ b/client/src/components/views/LandingPage/Sections/DrawTodoList/DrawTodoList.scss
@@ -7,18 +7,35 @@
     margin-top: 5%;
 
     .container {
-        width: 40%;
+        width: 60%;
 
         .todo_wrap {
             margin-bottom: 30px;
             font-size: 18px;
             cursor: pointer;
             border-bottom: 1px solid gray;
+            display: flex;
+            justify-content: space-between;
 
             .todo_index {
                 color: red;
                 font-weight: 300;
                 margin-right: 10px;
+            }
+
+            .btn_container {
+                display: flex;
+
+                .update_btn {
+                    background: #40a9ff;
+                    margin-right: 2%;
+                    color: white;
+                }
+    
+                .delete_btn {
+                    background: #FF1493;
+                    color: white;
+                }
             }
         }
     }
