할 일 내용 및 상태(flag) 수정(Update) 기능 구현 완료

--- a/client/src/components/views/LandingPage/Sections/AddTodo/AddTodo.scss
+++ b/client/src/components/views/LandingPage/Sections/AddTodo/AddTodo.scss
@@ -8,5 +8,13 @@
             width: 100%;
             border-radius: 5px;
         }
+
+        .add_btn {
+            width: 20%;
+            height: 52px;
+            background: #40a9ff;
+            color: white;
+            cursor: pointer;
+        }
     }
 }
